--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,24 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+     Copyright 2002 Sun Microsystems, Inc. All rights reserved.
+-->
 <!DOCTYPE web-app PUBLIC '-//Sun Microsystems, Inc.//DTD Web
      Application 2.3//EN' 'http://java.sun.com/dtd/web-app_2_3.dtd'>
 
-<web-app>
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
+                      http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
+         version="4.0">
+
+    <!--servlets-->
+
     <servlet>
         <servlet-name>BooksServlet</servlet-name>
         <servlet-class>by.itacademy.javaenterprise.lepnikau.app.servlet.BooksServlet</servlet-class>
     </servlet>
-    <servlet>
-        <servlet-name>BookServlet</servlet-name>
-        <servlet-class>by.itacademy.javaenterprise.lepnikau.app.servlet.BookServlet</servlet-class>
-    </servlet>
+
+    <!--servlet-mapping-->
 
     <servlet-mapping>
         <servlet-name>BooksServlet</servlet-name>
         <url-pattern>/books</url-pattern>
     </servlet-mapping>
 
-    <servlet-mapping>
-        <servlet-name>BookServlet</servlet-name>
-        <url-pattern>/book</url-pattern>
-    </servlet-mapping>
+    <!--filters-->
+
+    <filter>
+        <filter-name>ByIpFilter</filter-name>
+        <filter-class>by.itacademy.javaenterprise.lepnikau.app.filter.ByIpFilter</filter-class>
+    </filter>
+
+    <filter>
+        <filter-name>ContentTypeFilter</filter-name>
+        <filter-class>by.itacademy.javaenterprise.lepnikau.app.filter.ContentTypeFilter</filter-class>
+    </filter>
+
+    <!--filter-mapping-->
+
+    <filter-mapping>
+        <filter-name>ByIpFilter</filter-name>
+        <url-pattern>/books</url-pattern>
+    </filter-mapping>
+
+    <filter-mapping>
+        <filter-name>ByIpFilter</filter-name>
+        <url-pattern>/magazines</url-pattern>
+    </filter-mapping>
+
+    <filter-mapping>
+        <filter-name>ContentTypeFilter</filter-name>
+        <url-pattern>/books</url-pattern>
+    </filter-mapping>
+
+    <filter-mapping>
+        <filter-name>ContentTypeFilter</filter-name>
+        <url-pattern>/magazines</url-pattern>
+    </filter-mapping>
 </web-app>
