--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>by.it.academy.viachaslau.app</groupId>
-    <artifactId>Homework04</artifactId>
+    <groupId>by.itacademy.javaenterprise.lepnikau.app</groupId>
+    <artifactId>homework-04</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>Homework04</name>
+    <name>homework-04</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
